--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/jwt": "^9.0.1",
+    "@fastify/oauth2": "^8.1.0",
     "@prisma/client": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
